Active tab click issue on mobile screens

--- a/public/less/frontend/components/feature-list-v5.less
+++ b/public/less/frontend/components/feature-list-v5.less
@@ -11,6 +11,7 @@
     		list-style: none;
 			li{
 				display: inline-block;
+				z-index: 10;
 				position: relative;
 				opacity: 0.7;
                 vertical-align: top;
